corpus/element.txt
===================================
Element
===================================
element:
---

(document
  (element (key) (elementOperator))
)

===================================
Element (with template)
===================================
element < template
---

(document
  (element (key) (copyOperator) (template))
)

===================================
Elements
===================================
element:
element:
---

(document
  (element (key) (elementOperator))
  (element (key) (elementOperator))
)

===================================
Elements (with templates)
===================================
element < template
element < template
---

(document
  (element (key) (copyOperator) (template))
  (element (key) (copyOperator) (template))
)

===================================
Elements (with empty lines)
===================================
element:

element:
---

(document
  (element (key) (elementOperator))
  (element (key) (elementOperator))
)
