corpus/empty.txt
===================================
Empty
===================================
empty
---

(document
  (empty (key))
)

===================================
Empties
===================================
empty
empty
---

(document
  (empty (key))
  (empty (key))
)

===================================
Empties (with empty lines)
===================================
empty

empty
---

(document
  (empty (key))
  (empty (key))
)
