corpus/field.txt
===================================
Field (key with characters not allowed in first position)
===================================
f>#-|\: value
---

(document
  (field (key) (elementOperator) (value))
)

===================================
Field (escaped key)
===================================
`field`: value
---

(document
  (field (escapeOperator) (key) (escapeOperator) (elementOperator) (value))
)

===================================
Field (with value)
===================================
field: value
---

(document
  (field (key) (elementOperator) (value))
)

===================================
Field (with continuation)
===================================
field:
| continuation
---

(document
  (field (key) (elementOperator)
    (continuation (directContinuationOperator) (value))
  )
)

===================================
Field (with value and continuation)
===================================
field: value
| continuation
---

(document
  (field (key) (elementOperator) (value)
    (continuation (directContinuationOperator) (value))
  )
)

===================================
Field (with continuations, empty lines and comments)
===================================
field:
> comment
| continuation

| continuation
---

(document
  (field (key) (elementOperator)
    (comment (commentOperator) (comment))
    (continuation (directContinuationOperator) (value))
    (continuation (directContinuationOperator) (value))
  )
)

===================================
Fields (with values)
===================================
field: value
field: value
---

(document
  (field (key) (elementOperator) (value))
  (field (key) (elementOperator) (value))
)

===================================
Fields (with values and empty lines)
===================================
field: value

field: value
---

(document
  (field (key) (elementOperator) (value))
  (field (key) (elementOperator) (value))
)

===================================
Fields (with continuations and comments)
===================================
field:
> comment
| continuation
field:
> comment
| continuation
---

(document
  (field (key) (elementOperator)
    (comment (commentOperator) (comment))
    (continuation (directContinuationOperator) (value))
  )
  (field (key) (elementOperator)
    (comment (commentOperator) (comment))
    (continuation (directContinuationOperator) (value))
  )
)
