corpus/fieldset.txt
===================================
Fieldset (one entry)
===================================
fieldset:
entry = value
---

(document
  (fieldset (key) (elementOperator)
    (entry (key) (entryOperator) (value))
  )
)

===================================
Fieldset (one empty entry)
===================================
fieldset:
entry =
---

(document
  (fieldset (key) (elementOperator)
    (entry (key) (entryOperator))
  )
)

===================================
Fieldset (one entry with continuation)
===================================
fieldset:
entry = value
| continuation
---

(document
  (fieldset (key) (elementOperator)
    (entry
      (key) (entryOperator) (value)
      (continuation (directContinuationOperator) (value))
    )
  )
)

===================================
Fieldset (multiple entries)
===================================
fieldset:
entry = value
entry = value
---

(document
  (fieldset (key) (elementOperator)
    (entry (key) (entryOperator) (value))
    (entry (key) (entryOperator) (value))
  )
)

===================================
Fieldset (multiple entries with continuations)
===================================
fieldset:
entry = value
| continuation
entry = value
| continuation
---

(document
  (fieldset (key) (elementOperator)
    (entry
      (key) (entryOperator) (value)
      (continuation (directContinuationOperator) (value))
    )
    (entry
      (key) (entryOperator) (value)
      (continuation (directContinuationOperator) (value))
    )
  )
)

===================================
Fieldset (multiple entries with empty lines)
===================================
fieldset:

entry = value

entry = value
---

(document
  (fieldset (key) (elementOperator)
    (entry (key) (entryOperator) (value))
    (entry (key) (entryOperator) (value))
  )
)

===================================
Fieldset (multiple entries with comments)
===================================
fieldset:
> comment
entry = value
> comment
entry = value
---

(document
  (fieldset (key) (elementOperator)
    (comment (commentOperator) (comment))
    (entry (key) (entryOperator) (value))
    (comment (commentOperator) (comment))
    (entry (key) (entryOperator) (value))
  )
)

===================================
Fieldset (multiple entries with comments and empty lines)
===================================
fieldset:

> comment
entry = value
> comment

entry = value
---

(document
  (fieldset (key) (elementOperator)
    (comment (commentOperator) (comment))
    (entry (key) (entryOperator) (value))
    (comment (commentOperator) (comment))
    (entry (key) (entryOperator) (value))
  )
)

===================================
Fieldset (multiple entries with comments, continuations and empty lines)
===================================
fieldset:

entry = value

> comment
| continuation

> comment
entry = value
| continuation
---

(document
  (fieldset (key) (elementOperator)
    (entry (key) (entryOperator) (value)
      (comment (commentOperator) (comment))
      (continuation (directContinuationOperator) (value))
    )
    (comment (commentOperator) (comment))
    (entry
      (key) (entryOperator) (value)
      (continuation (directContinuationOperator) (value))
    )
  )
)
