corpus/list.txt
===================================
List (one item)
===================================
list:
- item
---

(document
  (list (key) (elementOperator)
    (item (itemOperator) (value))
  )
)

===================================
List (one empty item)
===================================
list:
-
---

(document
  (list (key) (elementOperator)
    (item (itemOperator))
  )
)

===================================
List (one item with continuation)
===================================
list:
- item
| continuation
---

(document
  (list (key) (elementOperator)
    (item (itemOperator) (value)
      (continuation (directContinuationOperator) (value))
    )
  )
)

===================================
List (multiple items)
===================================
list:
- item
- item
---

(document
  (list (key) (elementOperator)
    (item (itemOperator) (value))
    (item (itemOperator) (value))
  )
)

===================================
List (multiple items with continuations)
===================================
list:
- item
| continuation
- item
| continuation
---

(document
  (list (key) (elementOperator)
    (item (itemOperator) (value)
      (continuation (directContinuationOperator) (value))
    )
    (item (itemOperator) (value)
      (continuation (directContinuationOperator) (value))
    )
  )
)

===================================
List (multiple items with empty lines)
===================================
list:

- item

- item
---

(document
  (list (key) (elementOperator)
    (item (itemOperator) (value))
    (item (itemOperator) (value))
  )
)

===================================
List (multiple items with comments)
===================================
list:
> comment
- item
> comment
- item
---

(document
  (list (key) (elementOperator)
    (comment (commentOperator) (comment))
    (item (itemOperator) (value))
    (comment (commentOperator) (comment))
    (item (itemOperator) (value))
  )
)

===================================
List (multiple items with comments and empty lines)
===================================
list:

> comment
- item
> comment

- item
---

(document
  (list (key) (elementOperator)
    (comment (commentOperator) (comment))
    (item (itemOperator) (value))
    (comment (commentOperator) (comment))
    (item (itemOperator) (value))
  )
)

===================================
List (multiple items with comments, continuations and empty lines)
===================================
list:

- item
> comment
| continuation
> comment

- item
| continuation
---

(document
  (list (key) (elementOperator)
    (item (itemOperator) (value)
      (comment (commentOperator) (comment))
      (continuation (directContinuationOperator) (value))
    )
    (comment (commentOperator) (comment))
    (item (itemOperator) (value)
      (continuation (directContinuationOperator) (value))
    )
  )
)
