corpus/multiline_field.txt
===================================
Multiline Field
===================================
-- field
-- field
---

(document
  (field
    (multilineFieldOperator) (multilineFieldKey)
    (multilineFieldOperator) (multilineFieldKey)
  )
)
